# libSIMD

./: CMakeLists.txt  README.md  f32.cpp  f32.h  f64.cpp  f64.h  i16.cpp  i16.h  i32.cpp  i32.h  i64.cpp  i64.h  i8.cpp  i8.h  u16.cpp  u16.h  u32.cpp  u32.h  u64.cpp  u64.h  u8.cpp  u8.h
cmake/: FetchSIMD.cmake
simd/: f32.cpp  f32.h  f64.cpp  f64.h  i16.cpp  i16.h  i32.cpp  i32.h  i64.cpp  i64.h  i8.cpp  i8.h  u16.cpp  u16.h  u32.cpp  u32.h  u64.cpp  u64.h  u8.cpp  u8.h
